# cleanbkz

./: .gitignore  ASCPU.txt  CMakeLists.txt  Doxyfile.in  GH  README  TODO  commands.txt  debug  debug.sh  debug.txt  debug2.txt  newCPU.txt  plot.sh  ratio.tmp  timings.txt  tmp  tmp.txt  xaa
app/: CMakeLists.txt  boundtool.cpp  eprune.cpp  genbound.cpp  genlattice.cpp  timing.cpp  verify.cpp
include/cleanbkz/: boundary.hpp  boundtools.hpp  cjloss.hpp  enumeration.hpp  gsa.hpp  tools.hpp  version.hpp
src/: CMakeLists.txt  boundary.cpp  boundtools.cpp  cjloss.cpp  enumeration.cpp  tools.cpp
test/: CMakeLists.txt  act_test.cpp  detprofile.cpp  experiment.cpp  ghtest.cpp  gsa_test.cpp  main.cpp  performance_test.cpp  psucc_exp.cpp  randtest.cpp  unit_tests.cpp
