SET(TARGET1 timing)
SET(TARGET2 boundtool)
SET(TARGET3 genlattice)
SET(TARGET4 eprune)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})

ADD_EXECUTABLE(${TARGET1} timing.cpp)
TARGET_LINK_LIBRARIES(${TARGET1} cleanbkz ntl)

ADD_EXECUTABLE(${TARGET2} boundtool.cpp)
TARGET_LINK_LIBRARIES(${TARGET2} cleanbkz ntl)

ADD_EXECUTABLE(${TARGET3} genlattice.cpp)
TARGET_LINK_LIBRARIES(${TARGET3} cleanbkz ntl)

ADD_EXECUTABLE(${TARGET4} eprune.cpp)
TARGET_LINK_LIBRARIES(${TARGET4} cleanbkz ntl)
