SET(TARGET_NAME1 unit_tests)
SET(TARGET_NAME2 act_test)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})

ADD_EXECUTABLE(${TARGET_NAME1} unit_tests.cpp)
TARGET_LINK_LIBRARIES(${TARGET_NAME1} cleanbkz ntl)

ADD_EXECUTABLE(${TARGET_NAME2} act_test.cpp)
TARGET_LINK_LIBRARIES(${TARGET_NAME2} cleanbkz ntl)
