SET(TARGET_NAME1 unit_tests)
SET(TARGET_NAME2 act_test)
#SET(TARGET_NAME3 randtest)
#SET(TARGET_NAME4 detprofile)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})

ADD_EXECUTABLE(${TARGET_NAME1} unit_tests.cpp)
TARGET_LINK_LIBRARIES(${TARGET_NAME1} cleanbkz ntl)

ADD_EXECUTABLE(${TARGET_NAME2} act_test.cpp)
TARGET_LINK_LIBRARIES(${TARGET_NAME2} cleanbkz ntl)

#ADD_EXECUTABLE(${TARGET_NAME3} randtest.cpp)
#TARGET_LINK_LIBRARIES(${TARGET_NAME3} cleanbkz ntl)

#ADD_EXECUTABLE(${TARGET_NAME4} detprofile.cpp)
#TARGET_LINK_LIBRARIES(${TARGET_NAME4} cleanbkz ntl)
